<resources>
    <string name="app_name">BookRentalLocator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_title">BookRental Locator</string>
    <string name="rent_activity_access">Wypożycz książkę</string>
    <string name="searchingBook">Wyszukiwanie książek</string>
    <string name="regulamin">regulamin korzystania z aplikacji BookRental Locator. Terms and Agreements</string>
    <string name="accept">akceptuje regulamin</string>
    <string name="refuse">nie akceptuje regulaminu</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="empty_string" />
    <string name="bookcode_notfound">Książka o podanym kodzie nie istnieje.</string>
    <string name="database_error">Wystąpił błąd. Spróbuj ponownie.</string>
    <string name="book_rented">Książka została pożyczona</string>
    <string name="parametrized_book_not_found">Nie znaleziono książek o podanych parametrach</string>
    <string name="book_available">Książka jest dostępna</string>
    <string name="book_already_rented">Książka jest wypożyczona</string>
    <string name="search_result">Wyniki wyszukiwania dla:</string>
    <string name="library_name">Biblioteka Publiczna</string>
    <string name="history">Historia wypożyczeń</string>
    <string name="showHistoryBtTxt">Zobacz historię wypożyczeń</string>
    <string name="drink">Nie pij</string>
    <string name="silent">Zachowuj się cicho</string>
    <string name="inLibrary">W BIBLIOTECE:</string>
    <string name="phone">Nie rozmawiaj przez telefon</string>
    <string name="food">Nie spożywaj posiłków</string>
    <string name="noHistory">Jeszcze nie skorzystałeś z naszej biblioteki.</string>
    <string name="bookId">Identyfikator książki:</string>
    <string name="scanCode">Skanuj kod</string>
    <string name="findBook">Znajdź książkę</string>
    <string name="rentBook">Wypożycz książkę</string>
    <string name="next">Dalej</string>
    <string name="writeISBN">Wpisz numer</string>
    <string name="search">Szukaj</string>
    <string name="title">Tytuł:</string>
    <string name="author">Autor:</string>
    <string name="year">Rok wydania:</string>
    <string name="pubHouse">Wydawnictwo:</string>
    <string name="goBack">Powrót</string>
    <string name="dontForget">Nie zapomnij zwrócić: </string>
</resources>
